src/pages/Components/iPad/index.css
/* ... */
  .iPadContainer .Phone .PhoneFront {
    transform: translatez(20px);
    background: rgb(20, 20, 20);
  }
  .iPadContainer .Phone .PhoneFront .screen {
    width: 93%;
    height: 96%;
    border-radius: 30px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background: rgb(143, 143, 143);
  }
  .iPadContainer .Phone .PhoneFront .topBar {
    width: 45%;
    height: 6%;
    background: rgb(20, 20, 20);
    border-radius: 20px;
    position: absolute;
    left: 50%;
    top: -15px;
    transform: translate(-50%);
    justify-content: space-evenly;
  }
  @media screen and (min-width: 768px) {
    .iPadContainer .Phone .PhoneFront .topBar {
      display: none;
    }
  }
  .iPadContainer .Phone .PhoneFront .topBar .camera {
    width: 12px;
    height: 12px;
    background: rgb(43, 43, 43);
    border-radius: 50%;
    justify-content: center;
  }
  .iPadContainer .Phone .PhoneFront .topBar .camera .lenz {
    width: 70%;
    height: 70%;
    border-radius: 50%;
    background: rgb(0, 0, 63);
  }
  .iPadContainer .Phone .PhoneFront .topBar .speaker {
    width: 50%;
    height: 6px;
    border-radius: 10px;
    background: rgb(36, 36, 36);
  }
  .iPadContainer .Phone .PhoneBack {
    transform: translateZ(-40px) rotateY(180deg);
  }
  @media screen and (max-width: 768px) {
    .iPadContainer .Phone .PhoneBack {
      background: rgb(51, 51, 51);
      background: linear-gradient(338deg, rgb(51, 51, 51) 0%, rgb(97, 97, 97) 100%);
    }
  }
  @media screen and (min-width: 768px) {
    .iPadContainer .Phone .PhoneBack {
      background: rgb(60, 60, 60);
      background: linear-gradient(338deg, rgb(60, 60, 60) 0%, rgb(0, 0, 0) 100%);
    }
  }
  .iPadContainer .Phone .PhoneBack .Applelogo {
    width: 100px;
    height: 100px;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 70px;
  }
  .iPadContainer .Phone .PhoneBack .cameraSection {
    width: 180px;
    height: 180px;
    position: absolute;
    top: 50px;
    left: 50px;
    display: flex;
    transform-style: preserve-3d;
    transform: translateZ(5px);
  }
  @media screen and (min-width: 768px) {
    .iPadContainer .Phone .PhoneBack .cameraSection {
      display: none;
    }
  }
  .iPadContainer .Phone .PhoneBack .cameraSection .cameraSides {
    position: absolute;
    background: rgb(53, 53, 53);
    border: solid 2px rgb(49, 49, 49);
  }
  .iPadContainer .Phone .PhoneBack .cameraSection .frontside {
    width: 100%;
    height: 100%;
    transform: translateZ(5px);
    border-radius: 40px;
  }
  .iPadContainer .Phone .PhoneBack .cameraSection .frontside .lens1, .iPadContainer .Phone .PhoneBack .cameraSection .frontside .lens2, .iPadContainer .Phone .PhoneBack .cameraSection .frontside .lens3 {
    width: 78px;
    height: 78px;
    border-radius: 50%;
    background: rgb(37, 37, 37);
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .iPadContainer .Phone .PhoneBack .cameraSection .frontside .lens1 .outer, .iPadContainer .Phone .PhoneBack .cameraSection .frontside .lens2 .outer, .iPadContainer .Phone .PhoneBack .cameraSection .frontside .lens3 .outer {
    width: 80%;
    height: 80%;
    border-radius: 50%;
    background: rgb(0, 0, 0);
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .iPadContainer .Phone .PhoneBack .cameraSection .frontside .lens1 .outer .inner, .iPadContainer .Phone .PhoneBack .cameraSection .frontside .lens2 .outer .inner, .iPadContainer .Phone .PhoneBack .cameraSection .frontside .lens3 .outer .inner {
    width: 80%;
    height: 80%;
    border-radius: 50%;
    background: rgb(19, 19, 19);
  }
  .iPadContainer .Phone .PhoneBack .cameraSection .frontside .lens1 {
    top: 10px;
    left: 10px;
  }
  .iPadContainer .Phone .PhoneBack .cameraSection .frontside .lens2 {
    bottom: 10px;
    left: 10px;
  }
  .iPadContainer .Phone .PhoneBack .cameraSection .frontside .lens3 {
    top: 50%;
    right: 10px;
    transform: translateY(-50%);
  }
  .iPadContainer .Phone .PhoneBack .cameraSection .leftside, .iPadContainer .Phone .PhoneBack .cameraSection .rightside {
    width: 10px;
    height: 100%;
    display: none;
  }
  .iPadContainer .Phone .PhoneBack .cameraSection .topside, .iPadContainer .Phone .PhoneBack .cameraSection .bottomside {
    width: 100%;
    height: 10px;
    display: none;
  }
  .iPadContainer .Phone .PhoneBack .cameraSection .bottomside {
    transform: rotateX(-90deg) translateZ(172.5px);
  }
  .iPadContainer .Phone .PhoneBack .cameraSection .leftside {
    transform: rotateY(-90deg) translateZ(5px);
  }
  .iPadContainer .Phone .PhoneBack .cameraSection .rightside {
    transform: rotateY(90deg) translateZ(172.5px);
  }
  .iPadContainer .Phone .PhoneBack .cameraSection .topside {
    transform: rotateX(90deg) translateZ(5px);
  }
  .iPadContainer .Phone .PhoneTop, .iPadContainer .Phone .PhoneBottom {
    width: calc(100% - 80px);
    height: 40px;
    background: rgb(170, 170, 170);
  }
  .iPadContainer .Phone .PhoneTop .leftCorner, .iPadContainer .Phone .PhoneBottom .leftCorner {
    transform: translateX(50%) rotateY(-90deg) translateX(-40px) translateZ(-80px);
  }
  .iPadContainer .Phone .PhoneTop .rightCorner, .iPadContainer .Phone .PhoneBottom .rightCorner {
    transform: translateX(50%) rotateY(0deg) translateX(0px) translateZ(-40px);
  }
  .iPadContainer .Phone .PhoneTop {
    transform: translateY(-20px) rotateX(90deg) translate(40px) rotateZ(180deg);
  }
  .iPadContainer .Phone .leftCorner {
    left: -80px;
  }
  .iPadContainer .Phone .rightCorner {
    right: 0px;
  }
  .iPadContainer .Phone .corner {
    position: absolute;
    width: 2.5px;
    height: 40px;
  }
  .iPadContainer .Phone .corner div {
    background: rgb(109, 109, 109);
    width: 100%;
    height: 100%;
    position: absolute;
  }
/* ... */

